--- a/app/src/main/res/layout/adapter_layout.xml
+++ b/app/src/main/res/layout/adapter_layout.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
@@ -19,7 +17,8 @@
         android:orientation="horizontal"
         android:layout_marginLeft="2dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="2dp">
 
         <TextView
             android:id="@+id/textView"
@@ -28,13 +27,14 @@
             android:layout_marginLeft="6dp"
             android:layout_marginTop="2dp"
             android:textColor="@color/black"
-            android:text="User ID: "
+            android:text="@string/user_id"
             android:textSize="15sp"
 
             android:textStyle="normal"
 
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="6dp" />
 
         <TextView
             android:id="@+id/userID"
@@ -43,11 +43,11 @@
             android:layout_marginTop="4dp"
             android:layout_marginLeft="2dp"
             android:textColor="@color/black"
-            android:text="TextView"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/textView"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="2dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -61,13 +61,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043">
+        app:layout_constraintVertical_bias="0.043"
+        android:layout_marginStart="8dp">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title : "
+            android:text="@string/title"
             android:textSize="15sp"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -80,11 +81,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/black"
-            android:text="TextView"
             android:textSize="18sp"
             android:textStyle="italic"
-            app:layout_constraintStart_toEndOf="@+id/textView3" />
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="8dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -109,7 +113,7 @@
             android:layout_marginTop="4dp"
             android:textColor="@color/black"
 
-            android:text="ID: "
+            android:text="@string/id"
             android:textSize="15sp"
 
             android:textStyle="normal"
@@ -125,8 +129,7 @@
             android:layout_marginLeft="4dp"
             android:layout_marginTop="4dp"
             android:textColor="@color/black"
-            android:text="TextView"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/textView6"
             app:layout_constraintTop_toTopOf="parent" />
